--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
         with:
           name: jenkins-artifacts
           path: |
-            reactattifact/android/gradlew
-            reactattifact/android/build.gradle
+            gradlew
+            build.gradle
