--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+       - name: Navigate to Source Code Directory
+          run: cd path/to/source/code
+
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
