--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: Upload Jenkins Artifacts
- 
+
 on:
   push:
     branches:
       - master
- 
+
 jobs:
   upload-artifacts:
     runs-on: ubuntu-latest
@@ -12,13 +12,23 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
+
       - name: Navigate to Source Code Directory
         run: cd /var/lib/jenkins/workspace/reactattifact/android
+
+      - name: Use Node.js 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
+      - name: Install Dependencies and Build
+        run: |
+          npm install # or yarn install
+          ./gradlew build
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v2
         with:
           name: jenkins-artifacts
           path: |
-            gradlew
+            build
